# cuda_opencv_cpp-project

./: CMakeLists.txt  readme.md
src/: cuda_utils.cu  cuda_utils.h  main.cpp
